@@ -1629,6 +1629,8 @@ the default time will be 60 seconds.
 Use the "B:" option to signal only the batch shell, none of the other
 processes will be signaled. By default all job steps will be signaled,
 but not the batch shell itself.
+To have the signal sent at preemption time see the
+\fBpreempt_send_user_signal\fR \fBSlurmctldParameter\R.
 
 .TP
 \fB\-\-sockets\-per\-node\fR=<\fIsockets\fR>
